--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 3000
 
-DB_URL = 'mongodb+srv://alcalino_78:Prinzesin78@cluster0.gzlsymm.mongodb.net/hospital-api' //TODO
+DB_URL = 'mongodb+srv://alcalino_78:Prinzesin78@cluster0.gzlsymm.mongodb.net/hospital-api'
