--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.0",
+    "mongoose-autopopulate": "^0.16.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   }
