--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "loadSeed": "node seeds/patients.seed.js",
+    "loadSeed": "node seeds/doctors.seed.js && node seeds/patients.seed.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
