--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
+    "sharp": "^0.31.2",
     "streamifier": "^0.1.1"
   }
 }
